--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -6,14 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    >
+    tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_navigation_drawer"
+    <include layout="@layout/app_bar_navigation_drawer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -21,18 +18,16 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="#303030"
-        >
-<!--android:fitsSystemWindows="true"-->
+        android:paddingTop="30dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="12dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="60dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="12dp"
             android:layout_gravity="top"
-            android:gravity="left"
-            >
+            android:gravity="left">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -59,14 +54,14 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp">
+                android:paddingTop="5dp">
+
                 <TextView
                     android:id="@+id/menu_network_status_item"
                     android:text="Онлайн"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:paddingLeft="23dp"/>
+                    android:paddingLeft="23dp" />
                 <Switch
                     android:theme="@style/SwitchTheme"
                     android:id="@+id/nav_menu_switch"
@@ -81,7 +76,8 @@
                 android:id="@+id/online_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingTop="5dp">
 
                 <View
                     android:layout_width="fill_parent"
@@ -89,34 +85,30 @@
                     android:background="#c0c0c0"
                     android:paddingTop="10dp" />
 
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp">
+                    android:layout_marginTop="10dp">
 
                     <ImageView
                         android:layout_width="32dp"
                         android:layout_height="22dp"
                         android:src="@mipmap/ic_genres_button" />
-
                     <TextView
                         android:id="@+id/nav_menu_university_list_textview"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Список ВУЗов" />
+
                 </LinearLayout>
 
                 <View
+                    android:layout_marginTop="10dp"
                     android:layout_width="fill_parent"
                     android:layout_height="1dp"
-                    android:background="#c0c0c0"
-                    android:paddingBottom="10dp" />
-
-
+                    android:background="#c0c0c0" />
 
                 <android.support.v7.widget.SearchView xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/nav_menu_search"
@@ -134,7 +126,8 @@
                     android:layout_weight="1"
                     android:divider="#00000000"
                     android:gravity="left"
-                    android:paddingTop="15dp"/>
+                    android:layout_marginTop="12dp"/>
+
             </LinearLayout>
 
 
