--- a/app/src/main/res/layout-land/fragment_radio.xml
+++ b/app/src/main/res/layout-land/fragment_radio.xml
@@ -3,96 +3,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/padding_toolbar"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ultim.radio5.NavigationDrawerActivity"
-    android:id="@+id/main_content"
-    >
+    android:id="@+id/main_content">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/padding_toolbar">
 <!--    tools:showIn="@layout/app_bar_navigation_drawer"-->
-    <com.project.equalizerview.EqualizerView
-        android:id="@+id/equalaizer"
-        android:layout_width="wrap_content"
-        android:layout_height="110dp"
-        android:layout_alignParentBottom="true" />
-
-    <RelativeLayout
-        android:id="@+id/preview_layout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true">
-
         <com.project.equalizerview.EqualizerView
-            android:id="@+id/equalizerView_small"
-            android:layout_width="25dp"
-            android:layout_height="30dp"
-            android:gravity="center_vertical"
-            app:barCount="3"
+            android:id="@+id/equalaizer"
+            android:layout_width="wrap_content"
+            android:layout_height="110dp"
+            android:layout_alignParentBottom="true" />
 
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="12dp"
-            android:layout_marginStart="12dp" />
-
-        <TextView
-            android:id="@+id/preview_title"
+        <RelativeLayout
+            android:id="@+id/preview_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="НАЗВАНИЕ станции"
-            android:textStyle="normal"
-            android:textSize="20dp"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/equalizerView_small"
-            android:layout_toEndOf="@+id/equalizerView_small"
-            android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp" />
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true">
 
-    </RelativeLayout>
+            <com.project.equalizerview.EqualizerView
+                android:id="@+id/equalizerView_small"
+                android:layout_width="25dp"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                app:barCount="3"
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="266dp"
-            android:layout_height="189dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo_inactive" />
+            <TextView
+                android:id="@+id/preview_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="НАЗВАНИЕ станции"
+                android:textStyle="normal"
+                android:textSize="20dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/equalizerView_small"
+                android:layout_toEndOf="@+id/equalizerView_small"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp" />
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/content_play_btn"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
+                android:id="@+id/imageView"
+                android:layout_width="266dp"
+                android:layout_height="189dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/play_button_selector" />
+                android:src="@drawable/logo_inactive" />
 
-            <TextView
-                android:id="@+id/song_name"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="20dp"
-                android:textStyle="bold"
-                android:text="Исполнитель: Название трека"
-                android:textSize="@dimen/singer_size"
-                android:theme="@style/ToolBarStyle" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/content_play_btn"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/play_button_selector" />
+
+                <TextView
+                    android:id="@+id/song_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingTop="20dp"
+                    android:textStyle="bold"
+                    android:text="Исполнитель: Название трека"
+                    android:textSize="@dimen/singer_size"
+                    android:theme="@style/ToolBarStyle" />
+            </LinearLayout>
+
+
         </LinearLayout>
-
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <!--android:layout_height="140dp"-->
 </RelativeLayout>
