--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -35,7 +35,7 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingLeft="5dp"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <ImageView
                     android:id="@+id/settingsImageView"
@@ -57,7 +57,7 @@
                 android:orientation="horizontal"
                 android:paddingLeft="10dp"
                 android:paddingTop="5dp"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:id="@+id/menu_network_status_item"
