--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -6,10 +6,21 @@
     android:paddingTop="@dimen/padding_toolbar">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello_blank_fragment2"
-        android:textColor="#000000"/>
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+        <TextView
+            android:id="@+id/genre_fragment_playlist_info_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="download"/>
+    </LinearLayout>
+
 
 </FrameLayout>
