--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -17,9 +17,16 @@
             android:layout_height="wrap_content"
             android:textColor="#000000"/>
         <Button
+            android:id="@+id/download_genre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="download"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
